Update on Overleaf.

--- a/main_mestrado.tex
+++ b/main_mestrado.tex
@@ -57,6 +57,14 @@ showstringspaces=false
 \selectlanguage{portuges}
 \sloppy
 
+
+\usepackage{url}
+\usepackage{soul}
+\newcommand{\fj}[2]{{\st{#1}  {\textbf{#2}}}}
+% \sout{Hello World}
+
+
+
 \begin{document}
 
 
