--- a/ref.bib
+++ b/ref.bib
@@ -1,3 +1,13 @@
+@article{kodinariya2013review,
+  title={Review on determining number of Cluster in K-Means Clustering},
+  author={Kodinariya, Trupti M and Makwana, Prashant R},
+  journal={International Journal},
+  volume={1},
+  number={6},
+  pages={90--95},
+  year={2013}
+}
+
 @article{sathya2013comparison,
   title={Comparison of supervised and unsupervised learning algorithms for pattern classification},
   author={Sathya, R and Abraham, Annamma},
