--- a/cap1.tex
+++ b/cap1.tex
@@ -1,6 +1,3 @@
-% TODO ajustar abstract
-% TODO merge artigo
-
 \chapter{Introdu\c{c}\~{a}o}
 
 A indústria de jogos digitais é um dos segmentos de entretenimento mais rentáveis do mundo atualmente, superando, por exemplo, a indústria do cinema e da música \cite{newzoo1} \cite{ifpi1} \cite{mpaa1}. Conforme \cite{newzoo1}, o mercado de jogos digitais alcançou mais de 99,5 bilhões de dólares em 2016. Um fator importante para esse sucesso é a possibilidade de jogar \textit{online} e se juntar com jogadores de todo o mundo.
@@ -52,9 +49,7 @@ Esta dissertação encontra-se dividida em 7 capítulos. O Capítulo 2 apresenta
 Este capítulo aborda o histórico dos MOBAs e os principais conceitos relacionados a mineração de dados no contexto de jogos digitais.
 
 \section{MOBA}
-Os jogos MOBA tem suas origens nos jogos do gênero RTS, muito populares em meados dos anos 90 e início dos anos 2000. Suas características herdam traços que estão presentes em ambos os gêneros, sendo que os primeiros MOBAs foram criados utilizando as próprias ferramentas de criação de mapas personalizados RTS disponibilizados pelas desenvolvedoras. Para que se possa entender melhor as origens e características dos jogos MOBA, apresenta-se nesta seção um breve histórico de evolução do gênero.
-
-Assim, com a popularidade dos jogos de estratégia, houve grande interesse por parte dos jogadores em criar modos de jogo e mapas personalizados para estes, denominados de \textit{mods}. Esses jogadores se tornaram, portanto, modificadores do conteúdo dos jogos ou \textit{modders}. Os \textit{modders} eram responsáveis pelo desenvolvimento de mapas alternativos, e muitos destes tendiam para o estilo de jogo de um MOBA. Desde o início do desenvolvimento do gênero, a jogabilidade consistia em controlar um personagem denominado "herói" ou "campeão", escolher entre três rotas para avançar suas tropas e conquistar a estrutura principal inimiga.
+Os jogos MOBA tem suas origens nos jogos do gênero RTS. Suas características herdam traços que estão presentes em ambos os gêneros, sendo que os primeiros MOBAs foram criados utilizando as próprias ferramentas de criação de mapas personalizados RTS disponibilizados pelas desenvolvedoras. Assim, com a popularidade dos jogos de estratégia, houve grande interesse por parte dos jogadores em criar modos de jogo e mapas personalizados para estes, denominados de \textit{mods}. Esses jogadores se tornaram, portanto, modificadores do conteúdo dos jogos ou \textit{modders}. Os \textit{modders} eram responsáveis pelo desenvolvimento de mapas alternativos, e muitos destes tendiam para o estilo de jogo de um MOBA. Desde o início do desenvolvimento do gênero, a jogabilidade consistia em controlar um personagem denominado "herói" ou "campeão", escolher entre três rotas para avançar suas tropas e conquistar a estrutura principal inimiga \cite{do2016desenvolvimento} \cite{ferrari2013generative} \cite{minotti2014history}.
 
 \subsection{Aeon of Strife}
 Um dos primeiros MOBAs de sucesso teve origem no jogo RTS da Blizzard, Starcraft. Em 1998, um \textit{modder} conhecido como Aeon64 criou o Aeon of Strife, um mapa alternativo para o Starcraft. Nele, os jogadores controlavam um único herói cada e lutavam em uma equipe contra outra controlada por IA em três rotas do mapa. Essas rotas conectavam as bases das duas equipes. O objetivo era destruir a base da outra equipe.
@@ -100,7 +95,7 @@ Existem também diferentes tipos de dados: quantitativo (por exemplo, idade), ca
 Do ponto de vista analítico, a mineração de dados é desafiadora devido à grande diversidade nos problemas e tipos de dados encontrados. Mesmo considerando classes relacionadas de problemas, as diferenças são bastante significativas. Por exemplo, um problema de recomendação de produtos em uma base de dados multidimensional é muito diferente de um problema de recomendação social devido às diferenças no tipo de dados subjacentes. No entanto, apesar dessas diferenças, as aplicações de mineração de dados são muitas vezes classificadas em um desses principais problemas ou tarefas de mineração de dados: caracterização, discriminação, associação, classificação, regressão, agrupamento, análise de \textit{outliers}. Esses problemas são tão importantes porque eles são usados indiretamente como blocos de implementação em uma grande variedade de cenários de aplicações. O projeto final de uma solução para um problema específico de mineração de dados depende da habilidade do analista no mapeamento da aplicação para os diferentes blocos ou na utilização de novos algoritmos para uma aplicação específica.
 
 \subsection{Dados Telemétricos em Jogos Digitais}
-Jogos digitais modernos variam desde aplicativos simples a sistemas de informação incrivelmente sofisticados, mas comuns para todos eles é que precisam acompanhar as ações dos jogadores e calcular uma resposta para eles. Nos últimos anos, o rastreamento e o registro dessas informações, denominadas dados telemétricos em Ciência da Computação, têm-se generalizado na indústria de entretenimento digital, levando a uma riqueza de informações detalhadas sobre o comportamento dos jogadores.
+Jogos digitais modernos variam desde aplicativos simples a sistemas de informação incrivelmente sofisticados, mas comuns para todos eles é que precisam acompanhar as ações dos jogadores e calcular uma resposta para eles. Nos últimos anos, o rastreamento e o registro dessas informações, denominadas dados telemétricos em Ciência da Computação, têm-se generalizado na indústria de entretenimento digital, levando a uma riqueza de informações detalhadas sobre o comportamento dos jogadores \cite{el2016game}.
 
 A telemetria é um dos termos fundamentais da análise de jogos, descrevendo a coleta de dados à distância. A coleta, análise e geração de informações a partir de dados telemétricos de comportamento de usuários é a base para a análise atual no desenvolvimento de jogos.
 
@@ -117,15 +112,14 @@ Para que se trabalhe com dados telemétricos, os dados de atributos precisam ser
 Dados brutos telemétricos podem ser armazenados em vários formatos de base de dados e estruturados de forma a tornar possível a transformação dos dados em várias medidas interpretativas, como tempo médio de duração de jogo, receita por dia, número de usuários ativos por dia, e assim por diante. Essas medidas são chamadas de métricas de jogo. As métricas de jogo são, em essência, medidas interpretativas de algo e podem apresentar vantagens potenciais, como suporte à tomada de decisões estratégicas. Métricas podem ser características e vice-versa, ou agregados mais complexos ou valores calculados como a soma de múltiplas características. Para exemplificar: dados telemétricos de um atirador em um jogo de tiro podem incluir dados sobre a localização do personagem do jogador no ambiente virtual, as armas usadas e informações sobre se cada tiro atinge ou erra um alvo, dentre outros. Esses dados de atributos podem ser convertidos em características básicas, como número de acertos ou número de erros em um domínio de 0:1000, sendo 1000 o maior número de acertos efetuados em um mapa específico. Por sua vez, essas características básicas podem ser usadas para realizar uma análise simples, como o cálculo da taxa de acerto/erro em cada mapa do jogo. Uma alternativa é usar características como identificação do jogador, duração da partida e pontos marcados para calcular a métrica pontos marcados por minuto para cada jogador.
 
 \subsection{Processo de Mineração de Dados}
-Em 1996, foi desenvolvido um padrão interindústria que adotou uma abordagem neutra em termos de indústria, aplicação e ferramenta para mineração de dados, definindo como Processo Padrão Interindústria para Mineração de Dados (\textit{Cross-Industry Standard Process for Data Mining} - CRISP-DM) \footnote{www.crisp-dm.org} \cite{el2016game}. O CRISP-DM representa uma abordagem fundamental para os processos de mineração de dados, e diversas variantes especializadas existem voltadas para indústrias ou problemas específicos. Embora possa parecer complicado aplicar o processo CRISP-DM completo para cada uma das questões que queremos responder usando telemetria de jogos, na prática, algumas fases podem ser muito rápidas de se passar, especialmente se a análise já foi realizada em um conjunto de dados de comportamento de usuários anterior. O CRISP-DM fornece um processo padrão não proprietário e livre disponível para adaptar a mineração de dados na estratégia geral de resolução de problemas de uma organização ou pesquisa. É um processo iterativo e sua sequência de fases é adaptativa, ou seja, a próxima fase, em uma sequência de seis fases definidas, depende da associação de resultados da fase anterior. Por exemplo, pode ser necessário retornar à fase de preparação de dados para refinar os dados antes de avançar para a fase de modelagem - é uma situação típica em que a solução para uma questão leva a mais questões ou quando se trabalha com comportamento de jogadores.
+Em 1996, foi desenvolvido um padrão interindústria que adotou uma abordagem neutra em termos de indústria, aplicação e ferramenta para mineração de dados, definindo como Processo Padrão Interindústria para Mineração de Dados (\textit{Cross-Industry Standard Process for Data Mining} - CRISP-DM) \footnote{www.crisp-dm.org} \cite{chapman2000crisp}. O CRISP-DM representa uma abordagem fundamental para os processos de mineração de dados, e diversas variantes especializadas existem voltadas para indústrias ou problemas específicos. Embora possa parecer complicado aplicar o processo CRISP-DM completo para cada uma das questões que queremos responder usando telemetria de jogos, na prática, algumas fases podem ser muito rápidas de se passar, especialmente se a análise já foi realizada em um conjunto de dados de comportamento de usuários anterior. O CRISP-DM fornece um processo padrão não proprietário e livre disponível para adaptar a mineração de dados na estratégia geral de resolução de problemas de uma organização ou pesquisa. É um processo iterativo e sua sequência de fases é adaptativa, ou seja, a próxima fase, em uma sequência de seis fases definidas, depende da associação de resultados da fase anterior. Por exemplo, pode ser necessário retornar à fase de preparação de dados para refinar os dados antes de avançar para a fase de modelagem - é uma situação típica em que a solução para uma questão leva a mais questões ou quando se trabalha com comportamento de jogadores \cite{el2016game}.
 
 O CRISP-DM consiste em seis fases destinadas a um processo cíclico (Figura ~\ref{fig:crisp-dm}):
 
-% TODO
 \begin{figure*}
   \centering
-  \includegraphics[width=0.65\textwidth]{crisp-dm}%
-  \caption{Processo CRISP-DM}
+  \includegraphics[width=0.6\textwidth]{crisp-dm}%
+  \caption{Fases do processo CRISP-DM [5]: Compreensão do negócio (\textit{Business understanding}), Compreensão dos dados (\textit{Data understanding}), Preparação dos dados (\textit{Data preparation}), Modelagem (\textit{Modeling}), Avaliação (\textit{Evaluation}), Implantação (\textit{Deployment})}
   \label{fig:crisp-dm}
 \end{figure*}
 
@@ -313,9 +307,8 @@ wardsPlaced & Número de itens \textit{wards} usados\\
 
 \fj{}{LoL tem um pico diário de mais de 7,5 milhões de jogadores \cite{riot1} no mundo todo. Portanto, devido a enorme quantidade de partidas que existem,} coletamos aleatoriamente apenas 110.000 históricos de partidas da API a partir de fevereiro de 2016 até dezembro de 2016\fj{}{, de modo que essas partidas fossem representativas}. Para cada mês, coletamos 10.000 históricos. Consideramos os seguintes filtros para a coleta: 
 
-%TODO
 \begin{itemize}
-  \item Região: Brasil
+  \item Região: Brasil \footnote{A API do LoL não permite coletar partidas de regiões de maneira aleatória, por isso, foram coletadas apenas partidas do Brasil.}
   \item Temporada: 2016
   \item Modo de jogo: Clássico
   \item Tipo de fila: Competitivo (\textit{ranked}) \textit{solo};
@@ -325,13 +318,9 @@ wardsPlaced & Número de itens \textit{wards} usados\\
 
 \section{Extração de Características}
 
-% TODO
-% Consider a multidimensional database D with n records, and d attributes. Such a database D may be represented as an n × d matrix D, in which each row corresponds to one record and each column corresponds to a dimension. We generally refer to this matrix as the data matrix. This book will use the notation of a data matrix D, and a database D interchangeably.
+Em seguida, extraímos características das partidas coletadas para modelar nosso conjunto de dados de desempenho de equipes \fj{}{$X$}. Seja $M$ um conjunto de histórico de partidas onde $|M|=110000$, $T$ um conjunto de equipes onde $|T|=|M| * 2=220000$, $P=\{p_1, \ldots, p_{|P|}\}$ um conjunto \fj{dimensional de}{de desempenho onde cada desempenho $p \in P$ desse conjunto é um vetor de $d=38$} estatísticas básicas de desempenho de um jogador em um partida\fj{}{, tais como \textit{kills}, \textit{mininonsKilled} e \textit{assists}} da Tabela ~\ref{tab:features-desc}. Uma partida consiste de duas equipes distintas $m=\{t_a,t_b\}$ e uma equipe é composta pelo desempenho de 5 jogadores distintos $t=\{p_k |  p_k \in P^t; P^t \supset P; 1 \geq k \leq 5\}$. Selecionamos as estatísticas de desempenho dos jogadores nas partidas e somamos cada estatística $P_j \in P$ por equipe para formar cada característica ou estatística $X_j \in X$ do nosso conjunto de desempenho de equipes \fj{}{$X_{220000, 38}$}, de modo que $X = \{ x_{i} = \sum_{k=1}^{5} p_{k}^{i} | t_{i} \in T; p_{k}^{i} \in P \}$.
 
-Em seguida, extraímos características das partidas coletadas para modelar nosso conjunto de dados de desempenho de equipes \fj{}{$X$}. Seja $M$ um conjunto de histórico de partidas onde $|M|=110000$, $T$ um conjunto de equipes onde $|T|=|M| * 2=220000$, $P=\{p_1, \ldots, p_{|P|}\}$ um conjunto \fj{dimensional de}{de desempenho onde cada desempenho $p \in P$ desse conjunto é um vetor de $d=38$} estatísticas básicas de desempenho de um jogador em um partida\fj{}{, tais como \textit{kills}, \textit{mininonsKilled} e \textit{assists}}. Uma partida consiste de duas equipes distintas $m=\{t_a,t_b\}$ e uma equipe é composta pelo desempenho de 5 jogadores distintos $t=\{p_k |  p_k \in P^t; P^t \supset P; 1 \geq k \leq 5\}$. Selecionamos as estatísticas de desempenho dos jogadores nas partidas e somamos cada estatística $P_j \in P$ por equipe para formar cada característica ou estatística $X_j \in X$ do nosso conjunto de desempenho de equipes \fj{}{$X_{220000, 38}$}, de modo que $X = \{ x_{i} = \sum_{k=1}^{5} p_{k}^{i} | t_{i} \in T; p_{k}^{i} \in P \}$.
-
-% TODO
-Finalmente, para garantir a atomicidade no conjunto de dados $X$, decompomos algumas características, por exemplo, subtraimos \textit{physicalDamageDealt} de \textit{physicalDamageDealtToChampions} para computar \textit{physicalDamageDealtToMonsters} e subtraímos \textit{magicDamageDealt} de \textit{magicDamageDealtToChampions} para computar \textit{magicDamageDealtToMonsters}. Para evitar redundância nos dados, removemos também características compostas, por exemplo, características que são soma de outras:
+Finalmente, para garantir a atomicidade no conjunto de dados $X$, decompomos algumas características, \fj{por exemplo}{ou seja}, subtraimos \textit{physicalDamageDealt} de \textit{physicalDamageDealtToChampions} para computar \textit{physicalDamageDealtToMonsters} \fj{}{(dano físico total causado a monstros)} e subtraímos \textit{magicDamageDealt} de \textit{magicDamageDealtToChampions} para computar \textit{magicDamageDealtToMonsters} \fj{}{(dano m\'agico total causado a monstros)}. Para evitar redundância nos dados, removemos também características compostas, por exemplo, características que são somatórios de outras:
 
 \begin{itemize}
   \item \textit{totalDamageDealt = physicalDamageDealt + magicDamageDealt}
@@ -387,7 +376,7 @@ Dessa forma, como discutimos na seção 2.2.1, as características do nosso conj
 Após a normalização, \fj{o}{as caracter\'isticas do} conjunto de dados $X$ \fj{assumiu}{assumiram} valores na faixa $[0, 1]$.
 
 \section{Análise de Redundância}
-\fj{Para identificar e remover característica redundantes no conjunto de dados, realizamos uma análise de correlação.}{De modo a remover ru\'idos e apriomorar o tempo de agrupamento dos dados, removemos caracter\'istica redundantes do conjunto de dados por meio de uma análise de correla\c{a}\~ao.} Com base no teste de correlação de Spearman \cite{xiao2015using}, consideramos que um par de características de alta ou altíssima correlação são redundantes. A Figura ~\ref{fig:correlations} ilustra o gráfico de correlação entre as $d=24$ características \fj{}{restantes} do conjunto de dados $X$ \fj{}{reduzido e transformado at\'e est\'a etapa}. De acordo com o gráfico, podemos observar que existem várias características redundantes.
+\fj{Para identificar e remover caracter\'istica redundantes no conjunto de dados, realizamos uma an\'alise de correla\'c{c}\~ao.}{De modo a evitar ru\'idos e apriomorar o tempo de agrupamento dos dados, bem como facilitar a análise dos dados pelos usu\'arios finais, removemos as caracter\'istica redundantes do conjunto de dados por meio de uma an\'alise de correla\c{c}\~ao.} Com base no teste de correlação de Spearman \cite{xiao2015using}, consideramos que um par de características de alta ou altíssima correlação são redundantes. A Figura ~\ref{fig:correlations} ilustra o gráfico de correlação entre as $d=24$ características \fj{}{restantes} do conjunto de dados $X$ \fj{}{reduzido e transformado at\'e est\'a etapa}. De acordo com o gráfico, podemos observar que existem várias características redundantes.
 
 \begin{figure*}
   \centering
@@ -606,7 +595,5 @@ As descobertas do nosso estudo sugerem alguns elementos muito concretos que pode
 \section{Trabalhos Futuros}
 Para o futuro, poderíamos ampliar nosso trabalho nas seguintes direções: investigar mais correlações de dados com a inclusão de estatísticas cumulativas dependentes da duração das partidas ou dados categóricos; construir modelos preditivos para classificar o perfil de comportamento de equipes; e entender as semelhanças entre o comportamento de equipes do mundo real e \textit{online}.
 
-% TODO indicar referencias
-% TODO melhorar imagens
 % TODO capitulo para classificar depeneho de times em partidas
 % TODO tabela comparativa entre trabalhos relacionados  https://arxiv.org/pdf/1509.05176.pdf
