--- a/ref.bib
+++ b/ref.bib
@@ -1,3 +1,17 @@
+@inproceedings{ferrari2013generative,
+  title={From Generative to Conventional Play: MOBA and League of Legends.},
+  author={Ferrari, Simon},
+  booktitle={DiGRA Conference},
+  year={2013}
+}
+
+@article{do2016desenvolvimento,
+  title={Desenvolvimento de agentes inteligentes para jogos MOBA},
+  author={do Nascimento Silva, Victor},
+  year={2016},
+  publisher={UFMG}
+}
+
 @article{kodinariya2013review,
   title={Review on determining number of Cluster in K-Means Clustering},
   author={Kodinariya, Trupti M and Makwana, Prashant R},
@@ -26,6 +40,12 @@
   number={2},
   pages={43--67},
   year={2007}
+}
+
+@article{chapman2000crisp,
+  title={CRISP-DM 1.0 Step-by-step data mining guide},
+  author={Chapman, Pete and Clinton, Julian and Kerber, Randy and Khabaza, Thomas and Reinartz, Thomas and Shearer, Colin and Wirth, Rudiger},
+  year={2000}
 }
 
 @book{aggarwal2015data,
@@ -90,6 +110,13 @@
   title = 	 {2016 Global Games Market Report},
   year =	 2016,
   url = {https://cdn2.hubspot.net/hubfs/700740/Reports/Newzoo_Free_2016_Global_Games_Market_Report.pdf}
+}
+
+@Online{minotti2014history,
+  title={The history of MOBAs: from mod to sensation},
+  author={Minotti, M},
+  url = {https://venturebeat.com/2014/09/01/the-history-of-mobas-from-mod-to-sensation/view-all/}
+  year={2014}
 }
 
 @Online{newzoo2,
