--- a/main_mestrado.tex
+++ b/main_mestrado.tex
@@ -101,9 +101,9 @@ showstringspaces=false
 \newpage
 \cleardoublepage
 
-\input{epigrafe.tex}
-\newpage
-\cleardoublepage
+% \input{epigrafe.tex}
+% \newpage
+% \cleardoublepage
 
 \begin{agradecimentos}
 \input{agradecimentos.tex}
